# 生成文件: parser.cpp
# 生成路径: ${CMAKE_CURRENT_BINARY_DIR}
BISON_TARGET(PASCC_PARSER parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.cpp)

# 生成文件: lexer.cpp
# 生成路径: ${CMAKE_CURRENT_BINARY_DIR}
FLEX_TARGET(PASCC_LEXER lexer.l ${CMAKE_CURRENT_BINARY_DIR}/lexer.cpp)

# 生成文件: parser.hpp
ADD_FLEX_BISON_DEPENDENCY(PASCC_LEXER PASCC_PARSER)

add_library(pascc_parse ${BISON_PASCC_PARSER_OUTPUTS} ${FLEX_PASCC_LEXER_OUTPUTS})

set(ALL_OBJECT_FILES
    ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:pascc_parse>
    PARENT_SCOPE)